Fixed CSS : hide nav button on small screen

--- a/_sass/custom-style.scss
+++ b/_sass/custom-style.scss
@@ -35,6 +35,11 @@ blockquote.note
     aspect-ratio: 16/9;
 }
 
+.site-nav
+{
+    display: none;
+}
+
 .site-header
 {
     border-top: initial;
